[package]
name = "bbjwt"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://basebox.tech"
authors = [
  "Markus Thielen <markus.thielen@basebox.tech>",
]
keywords = [
  "jose", "jwt", "OpenID Connect", "crypto"
]
description = "A simple to use, well documented JWT validation library, mainly for validating OpenID Connect ID Tokens."

[dependencies]
url = { version = "2.1" }
thiserror = "1.0"
base64 = "0.13"
openssl = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11" }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.24.1", features = ["full", "time", "macros"] }
color-backtrace = "0.5.1"
env_logger = "0.10"
