[package]
name = "bbjwt"
version = "0.4.1"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://basebox.tech"
repository = "https://github.com/basebox-tech/bbjwt"
authors = ["Markus Thielen <markus.thielen@basebox.tech>"]
keywords = ["jose", "jwt", "openid-connect", "crypto"]
description = "A simple to use, well documented JWT validation library, mainly for validating OpenID Connect ID Tokens."

[dependencies]
url = { version = "2.1" }
thiserror = "1.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12" }
ring = { version = "0.17.13", features = ["std"] }
simple_asn1 = "0.6.2"
pem = "3.0.1"
derive_more = "0.99.17"
p384 = "0.13.0"
p256 = "0.13.2"
pkcs1 = { version = "0.7.5", features = ["std"] }
der = { version = "0.7.8", features = ["alloc"] }
tokio = { version = "1.35", features = ["sync"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.24.1", features = ["full", "time", "macros"] }
color-backtrace = "0.6"
env_logger = "0.10"
